--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: History-of-a-literary-radical-and-other-essays_69426
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69426-h/images/cover.jpg
 creator:
   author:
     agent_name: Bourne, Randolph Silliman
@@ -17,6 +20,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/41582
     wikipedia: https://en.wikipedia.org/wiki/Van_Wyck_Brooks
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69426#History-of-a-literary-radical-and-other-essays
 gutenberg_issued: '2022-11-26'
 identifiers:
   gutenberg: '69426'
